# hypo-assembler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_all.sh  install_htslib.sh  run_all.sh  scan_misjoin.py
demo/: ref1.fa  ref2.fa
eval/: README.md  eval_script.py
evaluation_script/: README.md  error_eval.py  misassembly.py  separate_hap.py
include/: Alignment.hpp  Contig.hpp  Hypo.hpp  Objects.hpp  PackedSeq.hpp  Polish.hpp  Window.hpp  globalDefs.hpp  levenshtein-sse.hpp  utils.hpp
overlap/: CMakeLists.txt  filter_alignments.py  filter_overlap.py  find_overlap  install_deps.sh  overlap.cpp  run_overlap.sh
overlap/libs/htslib-1.9/: bcf_sr_sort.pico  bgzf.pico  config.mk  config.status  errmod.pico  faidx.pico  hfile.pico  hfile_gcs.pico  hfile_libcurl.pico  hfile_net.pico  hfile_s3.pico  hts.pico  hts_os.pico  htsfile  kfunc.pico  knetfile.pico  kstring.pico  md5.pico  multipart.pico  probaln.pico  realn.pico  regidx.pico  sam.pico  synced_bcf_reader.pico  tabix  tbx.pico  textutils.pico  thread_pool.pico  vcf.pico  vcf_sweep.pico  vcfutils.pico
overlap/libs/htslib-1.9/autom4te.cache/: requests  traces.1
overlap/libs/htslib-1.9/cram/: cram_codecs.pico  cram_decode.pico  cram_encode.pico  cram_external.pico  cram_index.pico  cram_io.pico  cram_samtools.pico  cram_stats.pico  files.pico  mFILE.pico  open_trace_file.pico  pooled_alloc.pico  rANS_static.pico  sam_header.pico  string_alloc.pico
overlap/libs/htslib-1.9/lib/: libhts.so.1.9
overlap/libs/htslib-1.9/lib/pkgconfig/: htslib.pc
overlap/libs/htslib-1.9/test/: fieldarith  hfile  hts_endian  sam  test-bcf-sr  test-bcf-translate  test-regidx  test-vcf-api  test-vcf-sweep  test_bgzf  test_realn  test_view
polisher/: CMakeLists.txt  install_deps.sh
scaffold/: CMakeLists.txt  CustomBitvector.hpp  filter_scaffold.py  get_necessary_reads.py  (+6 more)
(+90 files in other folders)
